# JuliaSet

./: README.md  example.py  plot_result.py
first_try/: CMakeLists.txt
first_try/RunCards/: Run_1.ini
first_try/include/: grid.H  init.H  init.inl  point.H  point.inl
first_try/src/: CMakeLists.txt  first_try.C  grid.C  init.C  main.C  point.C
my_try/include/: grid.H  grid.inl  init.H  init.inl  point.H  point.inl
my_try/src/: main.C
